--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "^13.1.6",
+    "@vercel/analytics": "^0.1.11",
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.1",
     "next": "^13.1.6",
