--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@next/font": "^13.1.6",
     "@vercel/analytics": "^0.1.11",
+    "eslint-config-next": "^13.5.4",
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.1",
-    "next": "^13.1.6",
+    "next": "^13.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-mobile-app-button": "^1.2.17",
     "react-slick": "^0.28.1",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "^3.2.7"
